cloud/krystal/buggy-code/buggy-code-errors.txt
In file included from C:\Users\kryst\AppData\Local\Arduino15\packages\esp32\tools\esp32-arduino-libs\idf-release_v5.3-cfea4f7c-v1\esp32/include/freertos/esp_additions/include/freertos/idf_additions.h:21,
                 from C:\Users\kryst\AppData\Local\Arduino15\packages\esp32\tools\esp32-arduino-libs\idf-release_v5.3-cfea4f7c-v1\esp32/include/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:1533,
                 from C:\Users\kryst\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.1.1\cores\esp32/Arduino.h:33,
                 from C:\Users\kryst\AppData\Local\arduino\sketches\F91D6B828960D7D80028F00A6EA6CFBD\sketch\mariam-cloud.ino.cpp:1:
C:\Users\kryst\Documents\Arduino\Senior Design\iot-sitewise-communications\mariam-cloud\mariam-cloud\mariam-cloud.ino: In function 'void ProcessTask(void*)':
C:\Users\kryst\Documents\Arduino\Senior Design\iot-sitewise-communications\mariam-cloud\mariam-cloud\mariam-cloud.ino:49:31: error: 'send_node_NODE_RIGHTQueue' was not declared in this scope
   49 | #define SEND_QUEUE_NAME(node) send_node_##node##Queue
      |                               ^~~~~~~~~~
C:\Users\kryst\AppData\Local\Arduino15\packages\esp32\tools\esp32-arduino-libs\idf-release_v5.3-cfea4f7c-v1\esp32/include/freertos/FreeRTOS-Kernel/include/freertos/queue.h:470:26: note: in definition of macro 'xQueueSend'
  470 |     xQueueGenericSend( ( xQueue ), ( pvItemToQueue ), ( xTicksToWait ), queueSEND_TO_BACK )
      |                          ^~~~~~
C:\Users\kryst\Documents\Arduino\Senior Design\iot-sitewise-communications\mariam-cloud\mariam-cloud\mariam-cloud.ino:336:34: note: in expansion of macro 'SEND_QUEUE_NAME'
  336 |                   if (xQueueSend(SEND_QUEUE_NAME(NODE_RIGHT), &jsonCopy, 50 / portTICK_PERIOD_MS) == pdPASS) {
      |                                  ^~~~~~~~~~~~~~~
C:\Users\kryst\Documents\Arduino\Senior Design\iot-sitewise-communications\mariam-cloud\mariam-cloud\mariam-cloud.ino:49:31: error: 'send_node_NODE_RIGHTQueue' was not declared in this scope
   49 | #define SEND_QUEUE_NAME(node) send_node_##node##Queue
      |                               ^~~~~~~~~~
C:\Users\kryst\AppData\Local\Arduino15\packages\esp32\tools\esp32-arduino-libs\idf-release_v5.3-cfea4f7c-v1\esp32/include/freertos/FreeRTOS-Kernel/include/freertos/queue.h:470:26: note: in definition of macro 'xQueueSend'
  470 |     xQueueGenericSend( ( xQueue ), ( pvItemToQueue ), ( xTicksToWait ), queueSEND_TO_BACK )
      |                          ^~~~~~
C:\Users\kryst\Documents\Arduino\Senior Design\iot-sitewise-communications\mariam-cloud\mariam-cloud\mariam-cloud.ino:421:34: note: in expansion of macro 'SEND_QUEUE_NAME'
  421 |                   if (xQueueSend(SEND_QUEUE_NAME(NODE_RIGHT), &jsonCopy, 50 / portTICK_PERIOD_MS) == pdPASS) {
      |                                  ^~~~~~~~~~~~~~~

exit status 1

Compilation error: 'send_node_NODE_RIGHTQueue' was not declared in this scope
